--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light ">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top ">
             <div class="container">
                 <a class="navbar-brand pe-5 fs-2 fw-bold text-warning" href="#"> GROWUP</a>
 
@@ -52,7 +52,7 @@
             </div>
         </nav>
         <section>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div id=" carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -109,7 +109,7 @@
             </div>
         </section>
     </header>
-    <section class="container  my-5">
+    <section class="container  mt-5 ">
         <div class="text-center ">
             <h1 class="fs-2 fw-bold d">Discover our popular <br> corses </h1>
             <p>To get supper offer follow our special courses Be alart for get popular course in chip price </p>
@@ -123,7 +123,7 @@
                             <div>
                                 <h3>UI/UX Design</h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price : $20</p>
+                                <p class="text-primary">Price : $20</p>
                             </div>
 
                         </div>
@@ -134,7 +134,7 @@
                             <div>
                                 <h3>Javascript</h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price : $20</p>
+                                <p class="text-primary">Price : $20</p>
                             </div>
 
                         </div>
@@ -145,7 +145,7 @@
                             <div>
                                 <h3>Full stock <br> web development</h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price : $20</p>
+                                <p class="text-primary">Price : $20</p>
                             </div>
 
                         </div>
@@ -156,7 +156,7 @@
                             <div>
                                 <h3>Digital Marketing</h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price : $20</p>
+                                <p class="text-primary">Price : $20</p>
                             </div>
 
                         </div>
@@ -167,7 +167,7 @@
                             <div>
                                 <h3>Photography </h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price: $20</p>
+                                <p class="text-primary">Price: $20</p>
                             </div>
 
                         </div>
@@ -178,7 +178,7 @@
                             <div>
                                 <h3>Motion Grapics </h3>
                                 <p>This course is for Begginer</p>
-                                <p>Price : $20</p>
+                                <p class="text-primary">Price : $20</p>
                             </div>
 
                         </div>
@@ -188,8 +188,73 @@
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-center"><button type="button" class="btn btn-outline-warning ms-5 mb-5">See
+                More
+                courses
+            </button>
+        </div>
+    </section>
+    <section class="container content bg-primary text-white d-flex d-flex align-items-center">
+        <div>
+            <h2 class="fs-2 fw-bold">Ready to join ?</h2>
+            <p>We are providing you the best teaching experience . we thing every student will be our next capital .Your
+                success is my only goal .</p>
+        </div>
+        <div class="text-white rounded">
+            <button type="button" class="btn btn-outline-warning ">Register</button>
+
+        </div>
 
     </section>
+    <section class="container my-5  third">
+        <div class="text-black">
+            <h1 class="">Meet our winners</h1>
+            <p>We help lots of to get their success.See below some successful students.</p>
+        </div>
+        <div>
+            <div class="container text-center">
+                <div class="row g-2">
+                    <div class="col-lg-3 m-auto">
+                        <div class=" border bg-light">
+                            <img src="./images/student/student-1.png" alt="">
+                            <h4>Jubeyer Molla</h4>
+                            <p>Ux/UI Design</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 m-auto">
+                        <div class=" border bg-light">
+                            <img src="./images/student/student-2.png" alt="">
+                            <h4>Shama samsiya </h4>
+                            <p>Digital marketing</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 m-auto">
+                        <div class=" border bg-light">
+                            <img src="./images/student/student-3.png" alt="">
+                            <h4>Alif shick</h4>
+                            <p>Web devlopment </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 m-auto">
+                        <div class=" border bg-light">
+                            <img src="./images/student/student-4.png" alt="">
+                            <h4>Tanha Fariya</h4>
+                            <p>Graphics Design</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="d-flex justify-content-center"><button type="button"
+                    class="btn btn-outline-warning ms-5 mb-5">See
+                    More
+                    students
+
+                </button>
+            </div>
+        </div>
+    </section>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
