little bit more

--- a/index.html
+++ b/index.html
@@ -254,6 +254,87 @@
             </div>
         </div>
     </section>
+    <section class="container my-5 ">
+        <div class="text-center">
+            <h1>Ask your any types of problems </h1>
+            <p>In 24/48 hour we will replay to you .Feel free to know about aout primium courses <br>.Our experience
+                staff always waiting for you . so don not thing before ask .</p>
+        </div>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button text-black fw-bold" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        What are the differents between Flex and Grid
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Grid and flexbox.</strong> The basic difference between CSS Grid Layout and CSS Flexbox
+                        Layout is
+                        that flexbox was designed for layout in one dimension - either a row or a column. Grid was
+                        designed for two-dimensional layout - rows, and columns at the same time.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        what are the different between bootstrap and tailwind
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Bootstrap is a component-based.</strong>
+                        framework, which means it comes with prebuilt components and includes other utilities for
+                        layering displays, spacing, etc. Tailwind, on the other hand, CSS is a utility-first framework.
+                        Using Tailwind CSS is akin to writing regular CSS. Unlike Bootstrap, it has no prebuilt
+                        components.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        whatis css box model
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>In CSS, the term "box model" is used
+                            when talking about design and layout..</strong>
+
+                        The CSS box model is essentially a box that wraps around every HTML element. It consists of:
+                        margins, borders, padding, and the actual content. The image below illustrates the box mode
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapseThree">
+                        what is semantic tag
+                    </button>
+                </h2>
+                <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>The HTML semantics refers to the tags that provide meaning to an HTML page rather than
+                            just
+                            presentation.</strong>
+
+                        . It makes HTML more comprehensible by better defining the different sections and
+                        layout of web pages.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
