--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>www.growup.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/286b501f60.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -335,7 +336,35 @@
             </div>
         </div>
     </section>
+    <section class="container my-5">
+        <div class="fs-2 fw-bold text-center mt-4">
+            <h1>Trusted by over 1000+ company </h1>
+        </div>
+        <div class="d-flex justify-content-around mt-5  ">
+            <img src="./images/company/company-1.png" alt="">
+            <img src="./images/company/company-2.png" alt="">
+            <img src="./images/company/company-3.png" alt="">
+            <img src="./images/company/company-4.png" alt="">
+            <img src="./images/company/company-5.png" alt="">
+            <img src="./images/company/company-6.png" alt="">
+        </div>
+    </section>
+    <footer class="bg-black w-100 text-white text-center">
+        <div>
+            <h1>GROWUP</h1>
+            <p class="fs-4">Office 36/1 Golachipa ,Narayangonj </p>
+            <p class="fs-4">Narayangonj ,Bangladesh </p>
+            <p class="fs-4">Privecy policy l Terms of use</p>
+        </div>
+        <div class="g-5 fs-4">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
 
+        </div>
+
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
